--- a/project/alfar/index.html
+++ b/project/alfar/index.html
@@ -56,37 +56,34 @@
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">
-				Hold onto your trendy hats, more Audi Q SUVs are coming
+				This mad Alfa Romeo concept is the supercar we need right now
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
-				<img src="../img/q8_sport_concept_3.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/1_1_1.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				<b>We joke often of Audi’s ability to fill a niche.</b>
+				<b>We should probably preface this story with the fact that none of the images you are about to see are real, official, or in any way legitimate. </b>
 				<br/>
-				Or, indeed, create a new one all of its own.
-				Well, its spotted some numbers yet to be prefixed by a Q and, well, prefixed away. So there’ll be a large Q8 SUV next year, and a smaller Q4 in 2019.
-				We’ve long suspected both will exist, mind, and the Q8 has been previewed recently by this very fetching concept car (pictured above). Yep, the slightly safe Audi styling of old is being binned for something far bolder. Hurrah!
-				Described as a “premium SUV in a coupe style”, the Q8 will roll off the same Bratislava production line as the really quite good SQ7. We suspect an SQ8 might be a guilty pleasure of the highest order.
+				They are however, images. Images of an idea held by TG’s good friend Alex Imnadze; a chap who’s a dab hand at rendering quite wonderful cars using witchcraft levels of Photoshoppery. Today’s not-real sketch comes via Touring Superleggera’s quite wonderful Disco Volante, and Alfa Romeo’s very own 6C. Using both of these lovely automobiles as inspiration, Alex has put himself in the mind of an Alfa Romeo designer, were said designer be tasked with sketching out a mad, exquisite Alfa Romeo supercar. 
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/audi-q8/q8_sport_concept_2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/alfar/1_8_1.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				The Q4, meanwhile, will be built in Győr (it’s in Hungary), with production beginning a year after the Q8. Audi says the Q4 “will be positioned between the Audi Q3 and Q5” – much like the number four is positioned between three and five – and will no doubt be a bit curvier than either.
+				That’s about your lot for information, because it’s not real. But Alfa’s on a bit of a run of late: the new Giulia Quadrifoglio was TG’s Best Car of 2016, and the Stelvio SUV is an Alfa you might actually buy.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/audi-q8/a170086_large.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/alfar/1_9_0.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>					
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				Perhaps it’ll look like a shrunken Q8, though we got a glimpse of a small coupe-like Audi SUV a few years ago, via the slightly surprising TT offroad concept.
+				So just imagine this car, with that 3.0-litre turbocharged V6 and 503bhp, and you have this week’s dream supercar.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/audi-q8/a170087_large.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/alfar/1_2_1.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif;">
-				So, many more Audi SUVs are coming. Those with a keen eye on Q-badged cars will spot that only leaves the Q1 and Q6 as missed niche-filling opportunities. What chance we’ll be able to buy both in five years’ time?
+				Agree? Good.
 			</div>
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
