--- a/project/randr/index.html
+++ b/project/randr/index.html
@@ -56,37 +56,25 @@
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">
-				Hold onto your trendy hats, more Audi Q SUVs are coming
+				Yikes, someone's tuned a Range Rover Velar already
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
-				<img src="../img/q8_sport_concept_3.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/lumma-range-rover-velar2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				<b>We joke often of Audi’s ability to fill a niche.</b>
+				<b>It was inevitable, wasn’t it? </b>
 				<br/>
-				Or, indeed, create a new one all of its own.
-				Well, its spotted some numbers yet to be prefixed by a Q and, well, prefixed away. So there’ll be a large Q8 SUV next year, and a smaller Q4 in 2019.
-				We’ve long suspected both will exist, mind, and the Q8 has been previewed recently by this very fetching concept car (pictured above). Yep, the slightly safe Audi styling of old is being binned for something far bolder. Hurrah!
-				Described as a “premium SUV in a coupe style”, the Q8 will roll off the same Bratislava production line as the really quite good SQ7. We suspect an SQ8 might be a guilty pleasure of the highest order.
+				Given the Range Rover has been the darling of car tuners for years, it was only a matter of time before some of them got their overly creative mitts on the new Range Rover Velar. This is the first, and it’s the work of Lumma Design. As its Jaguar F-Pace and Bentley Bentayga prove only too well, Lumma loves an SUV. But only when it’s been given the wheels the size of a covered wagon’s and extended arches that would make a short-wheelbase Audi Quattro blush. And if you thought ‘Range Rover Velar’ was a minor mouthful, then prepare yourself for the Lumma CLR GT Limited Edition. The body kit is best described as ‘strong’, with wildly swelled wheel arches, side sills you can almost step on and an actual carbon rear spoiler. Oh, and a rear diffuser that looks like a grumpy mouth. 
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/audi-q8/q8_sport_concept_2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/randr/lumma-range-rover-velar.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				The Q4, meanwhile, will be built in Győr (it’s in Hungary), with production beginning a year after the Q8. Audi says the Q4 “will be positioned between the Audi Q3 and Q5” – much like the number four is positioned between three and five – and will no doubt be a bit curvier than either.
-			</div>
-			<div class="auto w3-image w3-center">
-				<img src="../img/audi-q8/a170086_large.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-			</div>					
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				Perhaps it’ll look like a shrunken Q8, though we got a glimpse of a small coupe-like Audi SUV a few years ago, via the slightly surprising TT offroad concept.
-			</div>
-			<div class="auto w3-image w3-center">
-				<img src="../img/audi-q8/a170087_large.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-			</div>
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif;">
-				So, many more Audi SUVs are coming. Those with a keen eye on Q-badged cars will spot that only leaves the Q1 and Q6 as missed niche-filling opportunities. What chance we’ll be able to buy both in five years’ time?
+				In fact, nearly all of the new bits are made from carbon. And while the wheel sizes aren’t specified, Lumma’s Range Rover Sport kits offer 22- and 23-inch rims, while its F-Pace has 24s. So expect cushioned ride quality to make way for flamboyant showmanship here, too.
+				For now, this CLR GT is just a concept, with Lumma promising the finished product by the end of the year. No prices yet, then, but its SUV conversions typically cost around £25,000.
+				So, add one to a handsomely specced Velar – no Lumma customer will have the entry-level diesel, we’re safe to assume – and you’re looking at a total bill of around £100,000. Perhaps more.
+				Simple question. Would you?!
 			</div>
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
