--- a/project/2/index.html
+++ b/project/2/index.html
@@ -209,9 +209,9 @@
 		<div class="w3-col l7">
 				<div class="w3-bar">
 					<div class="items w3-right">
-						<a href="../index.html" class="w3-button">1</a>
+						<a href="../" class="w3-button">1</a>
 				  		<a href="#" class="w3-hover-black w3-black w3-button">2</a>
-				  		<a href="../3/index.html" class="w3-button">3</a>
+				  		<a href="../3/" class="w3-button">3</a>
 					</div>
 				</div>
 		</div>
