--- a/project/corvette-history/index.html
+++ b/project/corvette-history/index.html
@@ -121,19 +121,13 @@
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
 			</div>
-			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 0.5%">
-				<div class="items__">
-					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-vk"></i></button>
-					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-facebook"></i></button>
-					<button onclick="document.getElementById('social').style.display='block'" class="w3-bar-item w3-btn"><i class="fa fa-google-plus"></i></button>
-				</div>
-			</div>	
-			<div class="w3-left w3-large" style="margin-left: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif;">
-				<div class="item1"><i style="padding-right: 2%" class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor</div>
-				<div class="item2"><i class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017</div>
+			<div class="w3-bar w3-large" style="margin-left: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif; width: 40%">
+				<div class="w3-bar-item"><i class="fa fa-user-circle" aria-hidden="true"></i>Kurzdor</div>
+				<div class="w3-bar-item"><i class="fa fa-calendar-o" aria-hidden="true"></i>14/04/2017</div>
 			</div>
 		</div>
-	</div>	 
+	</div>	
+	<!-- Row end --> 
 	<div class="w3-bar w3-card" style="font-family: 'Titillium Web', sans-serif;">
 		<div class="w3-center">
 		<div class="content">
