--- a/project/index.html
+++ b/project/index.html
@@ -21,9 +21,9 @@
 				<div class="w3-bar-item w3-hide-small w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-facebook" aria-hidden="true"></a></i></div>
 				<div class="w3-bar-item w3-hide-small w3-btn bd-t"><a href="https://vk.com/Kurzdor"><i class="fa fa-google-plus" aria-hidden="true"></a></i></div>
 			</div>
-			<a href="../index.html" class="w3-bar-item w3-btn w3-padding-large">AUTO.HU</a>
-			<a href="../index.html" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">HOME</a>
-			<a href="../contacts/index.html" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">CONTACTS</a>
+			<a href="../" class="w3-bar-item w3-btn w3-padding-large">AUTO.HU</a>
+			<a href="../" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">HOME</a>
+			<a href="../contacts/" class="w3-bar-item w3-btn w3-padding-large w3-hide-small bd-t">CONTACTS</a>
 		</div>
 	</div>
 
@@ -210,8 +210,8 @@
 				<div class="w3-bar">
 					<div class="items w3-right">
 						<button class="w3-hover-black w3-black w3-button">1</button>
-				  		<a href="2/index.html" class="w3-button">2</a>
-				  		<a href="3/index.html" class="w3-button">3</a>
+				  		<a href="2/" class="w3-button">2</a>
+				  		<a href="3/" class="w3-button">3</a>
 					</div>
 				</div>
 		</div>
