--- a/project/nissan-gtr/index.html
+++ b/project/nissan-gtr/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<meta name="theme-color" content="#f0f0f0">
+	<meta name="theme-color" content="#000000">
 	<title>auto.hu</title>
 	<link rel="icon" href="../favicon.png">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>	
