--- a/project/2/index.html
+++ b/project/2/index.html
@@ -55,21 +55,21 @@
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">
-				There's a new large Citroen SUV coming
+				Watch out Qashqai: it's the Citroen C5 Aircross
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
 				<img src="../img/8095.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; font-family: 'PT Sans', sans-serif;">
-					<b>This, boys and girls, is the Citroen C5 Aircross.</b>
+					<b>And it's got hydraulic cushions and bold styling. Time to ditch the Disco Sport?</b>
 					<br/>
-					Well, a drawing of it, at least.
-					The car itself will be on show at next week’s Shanghai motor show, and it’s the latest model in something Citroen calls its ‘SUV offensive’.
-					So it’s bigger than the forthcoming C3 crossover (previewed at the Geneva motor show), and it’ll launch in China initially, before European sales begin at the end of 2018.
+					This, boys and girls, is the Citroen C5 Aircross. Its the latest model in something Citroen calls its ‘SUV offensive’, and has been revealed at the Shanghai motor show. 
+					Bigger than the forthcoming C3 crossover (previewed at the Geneva motor show), and set to launch in China this year, before European sales begin in 2018, the Aircross is based on the same EMP2 platform as the DS 7 Crossback, Peugeot 3008 and Vauxhall Grandland X.
+					Like the DS and Peugeot, the C5 will eventually get a plug-in hybrid powertrain with 300bhp, all-wheel drive and a near-40 mile electric-only range. In Europe, most will come fitted with PSA’s conventional four-cylinder petrol and diesels. 
 					<a href="https://www.topgear.com/car-news/suvs/theres-new-large-citroen-suv-coming" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="../citroen/">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 			<div class="w3-col" style="visibility: hidden; width: 3%">
@@ -111,7 +111,7 @@
 					Hold your horses. This is no competitor for the Porsche 911 GT3, Mercedes AMG GT R or BMW M4 GTS. Audi says the R8 LMS GT4 is the “ideal race car for amateur campaigners” – a non-road-legal, off-the-shelf race car - like the Porsche Cayman GT4 Clubsport - which will be eligible for series like the British GT Championship and one-offs like the Nürburgring 24hrs.
 					<a href="https://www.topgear.com/car-news/new-york-motor-show/oh-yes-audi-has-built-hardcore-r8-gt4#17" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="../audi-r8/">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 	</div>
