--- a/project/2/index.html
+++ b/project/2/index.html
@@ -137,7 +137,7 @@
 				Indeed, The problem with the Nissan Rogue (X-Trail over here) has long been that it doesn’t come with snow and sand tracks. In its infinite wisdom, Nissan has solved the problem with this: the Rogue Trail Warrior Project. Never let it be said it doesn’t listen to its customers.
 				<a href="https://www.topgear.com/car-news/new-york-motor-show/nissan-rogue-tracks#1" style="color: white">_</a>
 				<br/>
-				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="../nissan-rogue/">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 			</div>
 		</div>
 	</div>	
@@ -161,7 +161,7 @@
 					The Red Arrows, for any of you who’ve never spent a day getting sun-burned on a military airfield watching the world’s most illustrious aerobatics display team defy gravity, death and quite a lot of noise regulations, is the Royal Air Force’s nine-strong team of super-pilots. Since 1965, they’ve been executing daring close-quarters stunts and high-speed passes at events like the British Grand Prix, the Queen’s Diamond Jubilee, and Mick Jagger’s birthday party (probably) tracing red, white and blue smoke into improbable shapes over the English countryside.
 					<a href="https://www.topgear.com/car-news/bond-cars/red-arrows-spec-aston-martin-vanquish-s" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="../aston/">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 	</div>
@@ -184,7 +184,7 @@
 				Quite literally. Too wide, impossible to see out of, uncomfortably jarring, and snatchy when the throttle was tickled. Less an everyday Porsche 911 rival, more a Dodge Hellcat with the steering wheel on the correct side.
 				<a href="https://www.topgear.com/car-reviews/mercedes-benz/amg-gt/gt-r-2dr-auto/first-drive-0" style="color: white">_</a>
 				<br/>
-				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="../mercedes/">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 			</div>
 		</div>
 	</div>
