--- a/project/aston/index.html
+++ b/project/aston/index.html
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
 	<!-- Navbar on large screens -->
 	<div class="w3-top w3-hide-small w3-hide-medium">
 		<div class="w3-bar w3-white w3-top w3-xlarge" style="font-family: 'Titillium Web', sans-serif; padding-top: 2px">
@@ -57,31 +56,38 @@
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">
-			America, this is your Nissan GT-R Track Edition
+				This is a Red Arrows-spec Aston Martin Vanquish S
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
-				<img src="../img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/q-by-aston-martin_vanquish-s-red-arrows-edition_03.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				<b>At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date.</b>
-				<br/>
-				With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
+				<b>Meet the very best of British.</b>
+				<br/> 
+				Or, in other words, the Q by Aston Martin Vanquish S Red Arrows Edition. The ‘want’ is strong with this one.
+				The Red Arrows, for any of you who’ve never spent a day getting sun-burned on a military airfield watching the world’s most illustrious aerobatics display team defy gravity, death and quite a lot of noise regulations, is the Royal Air Force’s nine-strong team of super-pilots. Since 1965, they’ve been executing daring close-quarters stunts and high-speed passes at events like the British Grand Prix, the Queen’s Diamond Jubilee, and Mick Jagger’s birthday party (probably) tracing red, white and blue smoke into improbable shapes over the English countryside.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/nissan/2017_nissan_gt_r_track_edition_101.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/aston/q-by-aston-martin_vanquish-s-red-arrows-edition_03.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				Anyway, this one’s called the Track Edition, and is a tough game of spot-the-difference for Skyline enthusiasts. Yes, it still delivers 562bhp at 6,800 rpm, and 469lb ft of torque, so there’s no change to the 3.8-litre twin-turbo V6 attached to that brutally effective four-wheel-drive system and dual-clutch gearbox. A shame when there’s the 600bhp Nismo to pinch parts from. But there have been a few Nismo hand-me-downs.
+				Aston Martin’s bespoke-minded Q division has announced it’s to produce ten of these Red Arrows-inspired editions for Aston Martin Cambridge, based on the delectable Vanquish S. That means a 5.9-litre, 592bhp naturally aspirated V12 up front, rear-wheel drive and a top speed of 201mph, passing 60mph along the way in a scant 3.9 seconds. And rather gorgeous bodywork over the top.
+				To said bodywork, Aston Martin’s Q division has applied the Red Arrows trademark Eclat Red paintwork, as worn by the team’s RAF Hawk jets. The carbon roof has a ‘charge’ pattern laid into it, evoking the look of the zig-zag explosives set into jet cockpits to shatter the canopy in case the pilot has to eject. Aston Martin is adamant the Q brand has not – repeat NOT – fitted the Vanquish S with an ejector seat. Bloody spoilsports.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/nissan/2017_nissan_gt_r_track_edition_24.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/aston/q-by-aston-martin_vanquish-s-red-arrows-edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>					
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				Anyway, this one’s called the Track Edition, and is a tough game of spot-the-difference for Skyline enthusiasts. Yes, it still delivers 562bhp at 6,800 rpm, and 469lb ft of torque, so there’s no change to the 3.8-litre twin-turbo V6 attached to that brutally effective four-wheel-drive system and dual-clutch gearbox. A shame when there’s the 600bhp Nismo to pinch parts from. But there have been a few Nismo hand-me-downs.
+				The white and blue side strakes hint at the smoke trails left by jets arcing through the sky (tyre smoke may also be used for this effect), and the Pinewood green upholstery inside is a subtle nod to RAF flight suits. Plaques and logos abound inside. We particularly like the black and yellow stitching inspired by the ‘do not pull this unless you really have to, old chap’ ejector seat handle. Again, no actual rocket-powered chairs in here. Or missiles. Suppose the real Red Arrows don’t carry weapons either, so that’s okay.
+				Want to take the kids out in your road-going Red Arrow? Tough. The cars will be homologated as two-seaters only, leaving the rear cubby holes as space for his and hers race helmets. The lids are part of an owners’ accessory set that’ll also include flight suits, bespoke luggage, a book detailing the project and scale models of their car and a Hawk jet. It’s like sorting the main Christmas present and all the stocking fillers in one fell swoop.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/nissan/2017_nissan_gt_r_track_edition_22.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/aston/q-by-aston-martin_vanquish-s-red-arrows-edition_07.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 3%; font-family: 'PT Sans', sans-serif;">
+				Only nine examples will be offered for public sale, mirroring the Arrows’ nine-strong formation. However, Q by Aston Martin will actually build ten cars, with the final one gifted to the RAF Benevolent Fund, the charity established to provide support to former servicemen and women, and their families. Even if fast jets aren’t your thing, you can’t argue with that sentiment.
+				Meantime, what other legendary military outfits should carmakers ape with their flagship models? Dodge Hellcat in association with Navy Seals? The Ferrari International Rescue Thunderbirds Collection? We await your suggestions below…
 			</div>
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
