--- a/project/nissan-rogue/index.html
+++ b/project/nissan-rogue/index.html
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-
 	<!-- Navbar on large screens -->
 	<div class="w3-top w3-hide-small w3-hide-medium">
 		<div class="w3-bar w3-white w3-top w3-xlarge" style="font-family: 'Titillium Web', sans-serif; padding-top: 2px">
@@ -57,31 +56,51 @@
 		</div>
 		<div class="w3-col l7 w3-card w3-xxlarge">
 			<div class="header" style="padding-top: 1.5%; padding-left: 2%; font-family: 'Titillium Web',sans-serif;">
-			America, this is your Nissan GT-R Track Edition
+				This is a Nissan Rogue with TRACKS
 			</div>
 			<hr/>
 			<div class="auto w3-image w3-center">
-				<img src="../img/2017_nissan_gt_r_track_edition_05.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/nissan_rogue_trail_warrior_project_2.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				<b>At last year’s New York Auto Show, Nissan unveiled the most significant facelift of the R35 to date.</b>
+				<b>Nissan fits tracks to American X-Trail. Because reasons:</b>
 				<br/>
-				With more power, new looks and a different interior, 2017’s Godzilla had a little more life injected into it thanks to a softer, more premium outlook. For this year’s New York Auto Show, Nissan has put the harshness back in, keeping the R35 alive even longer. Until an entirely new generation GT-R arrives… at some point in the future.
+				<br/>
+				<b>That’s what’s been stopping me from buying a Rogue. A lack of tracks.</b>
+				<br/>
+				Indeed, The problem with the Nissan Rogue (X-Trail over here) has long been that it doesn’t come with snow and sand tracks. In its infinite wisdom, Nissan has solved the problem with this: the Rogue Trail Warrior Project. Never let it be said it doesn’t listen to its customers.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/nissan/2017_nissan_gt_r_track_edition_101.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/nissan-rogue/nissan_rogue_trail_warrior_project_4.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				Anyway, this one’s called the Track Edition, and is a tough game of spot-the-difference for Skyline enthusiasts. Yes, it still delivers 562bhp at 6,800 rpm, and 469lb ft of torque, so there’s no change to the 3.8-litre twin-turbo V6 attached to that brutally effective four-wheel-drive system and dual-clutch gearbox. A shame when there’s the 600bhp Nismo to pinch parts from. But there have been a few Nismo hand-me-downs.
+				<b>Tell me more.</b>
+				<br/>
+				Based off the US-market Rogue, the RTWP will be on display at this week’s New York Motor Show. As you can see, it has tracks. Four of them, to be precise. One in place of each wheel. They’re called ‘Dominator’ Tracks, and they’re four-foot long, 30 inches high and 15 inches wide.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/nissan/2017_nissan_gt_r_track_edition_24.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/nissan-rogue/nissan_rogue_trail_warrior_project_14.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>					
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				Anyway, this one’s called the Track Edition, and is a tough game of spot-the-difference for Skyline enthusiasts. Yes, it still delivers 562bhp at 6,800 rpm, and 469lb ft of torque, so there’s no change to the 3.8-litre twin-turbo V6 attached to that brutally effective four-wheel-drive system and dual-clutch gearbox. A shame when there’s the 600bhp Nismo to pinch parts from. But there have been a few Nismo hand-me-downs.
+				<b>Please tell me it has some kind of V8…</b>
+				<br/>									
+				Sorry. Besides modifications to the Rogue’s suspension and wheel wells (to make the tracks fit, more than anything else), it remains mechanically stock. This means a 2.5-litre four-cylinder engine and CVT transmission, 170bhp and 175lb ft of torque.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/nissan/2017_nissan_gt_r_track_edition_22.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/nissan-rogue/nissan_rogue_trail_warrior_project_15.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				<b>Looks interesting though.</b>
+				<br/>				
+				Aesthetic mods include tinted headlights, fender-flares (British translation: wheel-arch extensions), LED lights and a winch. There’s also a camo wrap, and all the glass has been tinted yellow for, so far as we can see, no reason whatsoever.
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/nissan-rogue/nissan_rogue_trail_warrior_project_21.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
+				<b>Can I buy one?</b>
+				<br/>				
+				Nissan says the RTWP is a one-off (don’t expect to see tracks on the options list anytime soon), and one of “several unique takes” on the crossover it’ll be displaying at the NY show. It also says “If you want to stand out from the crowd during a day on the slopes or the beach, this is the vehicle to take.”  Indeed.
 			</div>
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
