--- a/project/3/index.html
+++ b/project/3/index.html
@@ -137,7 +137,7 @@
 					It is very cool, certainly, but the Italians aren’t the only ones with flash police cars. Have a flick through the gallery for some of our faves…
 					<a href="https://www.topgear.com/car-news/supercars/meet-the-worlds-very-best-and-coolest-police-cars#1" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="toppolicecars">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 	</div>
@@ -160,7 +160,7 @@
 					Yep, some Koenigsegg owners decided to huddle together for an impromptu gathering and parade through Switzerland’s capital to the motor show. There were eight Koenigseggs in attendance (although you will only see seven in most pics as a blue One:1 rocked up late) that included two One:1 models (from only seven ever built), the first Agera RS built for the US market (Agera XS), the recently re-built Agera prototype, the yellow Agera ML (that drove across the alps to get there), the gold-leaf Agera RS Naraya, and two CCXs. 
 					<a href="https://www.topgear.com/car-news/supercars/gallery-eight-koenigsegg-hypercars-geneva#1" style="color: white">_</a>
 					<br/>
-					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+					<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="../agerars">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 				</div>
 			</div>
 	</div>
