--- a/project/agerars/index.html
+++ b/project/agerars/index.html
@@ -66,7 +66,7 @@
 			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
 				<b>Marvel at the sight of much horsepower and expense in Switzerland</b>
 				<br/>
-				The Geneva Motor Show, 2017: certainly no shortage of horsepower, with the likes of the Ferrari 812 Superfast, Porsche 911 GT3 and McLaren 720S. But just outside the Palexpo, Koenigsegg’s customers put on a little horsepower show all of its own. And it was glorious. Yep, some Koenigsegg owners decided to huddle together for an impromptu gathering and parade through Switzerland’s capital to the motor show. There were eight Koenigseggs in attendance (although you will only see seven in most pics as a blue One:1 rocked up late) that included two One:1 models (from only seven ever built), the first Agera RS built for the US market (Agera XS), the recently re-built Agera prototype, the yellow Agera ML (that drove across the alps to get there), the gold-leaf Agera RS Naraya, and two CCXs. _ 
+				The Geneva Motor Show, 2017: certainly no shortage of horsepower, with the likes of the Ferrari 812 Superfast, Porsche 911 GT3 and McLaren 720S. But just outside the Palexpo, Koenigsegg’s customers put on a little horsepower show all of its own. And it was glorious. Yep, some Koenigsegg owners decided to huddle together for an impromptu gathering and parade through Switzerland’s capital to the motor show. There were eight Koenigseggs in attendance (although you will only see seven in most pics as a blue One:1 rocked up late) that included two One:1 models (from only seven ever built), the first Agera RS built for the US market (Agera XS), the recently re-built Agera prototype, the yellow Agera ML (that drove across the alps to get there), the gold-leaf Agera RS Naraya, and two CCXs.
 			</div>
 			<div class="auto w3-image w3-center">
 				<img src="../img/agerars/img_0342_0.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
@@ -78,16 +78,25 @@
 				So, click through the gallery and tell us which is your favourite ‘Segg below.
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/nissan/2017_nissan_gt_r_track_edition_24.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
-			</div>					
-			<div class="w3-large" style="margin-left: 5%; margin-right: 5%; margin-bottom: 5%; font-family: 'PT Sans', sans-serif;">
-				Anyway, this one’s called the Track Edition, and is a tough game of spot-the-difference for Skyline enthusiasts. Yes, it still delivers 562bhp at 6,800 rpm, and 469lb ft of torque, so there’s no change to the 3.8-litre twin-turbo V6 attached to that brutally effective four-wheel-drive system and dual-clutch gearbox. A shame when there’s the 600bhp Nismo to pinch parts from. But there have been a few Nismo hand-me-downs.
+				<img src="../img/agerars/img_0369.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="auto w3-image w3-center">
-				<img src="../img/nissan/2017_nissan_gt_r_track_edition_22.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+				<img src="../img/agerars/img_0465_0.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/agerars/img_0596.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/agerars/img_1131_0 (1).jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>
+			<div class="auto w3-image w3-center">
+				<img src="../img/agerars/dsc8545_0.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
+			</div>				
+			<div class="auto w3-image w3-center">
+				<img src="../img/agerars/img_1200_0.jpg" alt="" style="width: 75%; height: 50%; margin-bottom: 3%;">
 			</div>
 			<div class="w3-center">
-				<iframe width="560" height="315" src="https://www.youtube.com/embed/k4pwu14u8rk" frameborder="0" allowfullscreen></iframe>
+				<iframe width="75%" height="455" src="https://www.youtube.com/embed/k4pwu14u8rk" frameborder="0" allowfullscreen></iframe>
 			</div>
 			<div class="w3-large" style="margin-left: 5%; font-family: 'PT Sans', sans-serif;">	
 				Share this page:		
