--- a/project/3/index.html
+++ b/project/3/index.html
@@ -184,7 +184,7 @@
 				Although it really isn’t Top Trumps. As Harris said in his TG telly piece, the Chiron isn’t really a car that you compare to the current holy trinity of hybrid hypercars (the 918, P1 and LaFerrari) so this is more a celebration of numbers – usually the bizarrely large.
 				<a href="https://www.topgear.com/car-news/modified/yikes-someones-tuned-range-rover-velar-already" style="color: white">_</a>
 				<br/>
-				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></div>
+				<div class="w3-btn w3-right" style="font-family: 'Titillium Web', sans-serif; margin-bottom: 1%;"><a href="../chiron/">Read more <i class="fa fa-arrow-right" aria-hidden="true"></i></a></div>
 			</div>
 		</div>
 	</div>
